<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundFill"
    android:orientation="vertical"
    tools:context=".onboarding.FirstOnboardingFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:scaleType="centerCrop"
        android:src="@drawable/equipment"
        android:contentDescription="@string/equipment_description" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/create_a_workout"
        android:textColor="@color/ink"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/kick_start"
        android:textColor="@color/textGray"
        android:textSize="18sp"
        android:paddingHorizontal="24dp" />

</LinearLayout>
