<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundFill"
    android:orientation="vertical"
    tools:context=".onboarding.ThirdOnboardingFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:contentDescription="@string/equipment_description"
        android:scaleType="centerCrop"
        android:src="@drawable/equipment3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:paddingHorizontal="24dp"
        android:text="@string/hassle_free_repetition_tracking"
        android:textColor="@color/ink"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingHorizontal="24dp"
        android:text="@string/counting_made_easier"
        android:textColor="@color/textGray"
        android:textSize="18sp" />

</LinearLayout>
